cm4all-beng-proxy (0.7.15) unstable; urgency=low

  * processor: unreference the caller pool in abort()
  * tcache: clear BASE on mismatch
  * fcgi-client: generate the Content-Length request header
  * fcgi-client: send the CONTENT_TYPE parameter

 --

cm4all-beng-proxy (0.7.14) unstable; urgency=low

  * connection: drop connections when the limit is exceeded
  * resource-address: added BASE support
  * fcgi-client: check the request ID in response packets
  * http-client: check response body when request body is closed
  * html-escape: use the last ampersand before the semicolon
  * html-escape: support &apos;
  * processor: unescape widget parameter values

 -- Max Kellermann <mk@cm4all.com>  Fri, 29 Jan 2010 17:49:43 +0100

cm4all-beng-proxy (0.7.13) unstable; urgency=low

  * fcgi-request: duplicate socket path
  * fcgi-request: support ACTION
  * fcgi-client: provide SCRIPT_FILENAME
  * fcgi-client: append empty PARAMS packet
  * fcgi-client: try to read response before request is finished
  * fcgi-client: implement the STDERR packet
  * fcgi-client: support request headers and body
  * fcgi-stock: manage one socket per child process
  * fcgi-stock: unlink socket path after connect
  * fcgi-stock: redirect fd 1,2 to /dev/null
  * fcgi-stock: kill FastCGI processes after 5 minutes idle
  * translation: new packet PAIR for passing parameters to FastCGI

 -- Max Kellermann <mk@cm4all.com>  Thu, 14 Jan 2010 13:36:48 +0100

cm4all-beng-proxy (0.7.12) unstable; urgency=low

  * http-cache: unlock the cache item after successful revalidation
  * http-cache-memcached: pass the expiration time to memcached
  * sink-header: comprise pending data in method available()
  * header-forward: forward the Expires response header

 -- Max Kellermann <mk@cm4all.com>  Tue, 22 Dec 2009 16:18:49 +0100

cm4all-beng-proxy (0.7.11) unstable; urgency=low

  * {ajp,memcached}-client: fix dis\appearing event for duplex socket
  * memcached-client: handle EAGAIN after send()